<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:padding="10dp"
    tools:context=".view.SettingBottomSheetFragment">

    <TextView
        android:id="@+id/txt_setting_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_sorting_type"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group_sorting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_setting_sort"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton_sort_by_fare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/fare"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_setting_sort"
            app:layout_constraintTop_toBottomOf="@+id/radioButton_sort_by_arr_time" />

        <RadioButton
            android:id="@+id/radioButton_sort_by_dept_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/take_off_time"
            app:layout_constraintBottom_toTopOf="@+id/radioButton_sort_by_fare"
            app:layout_constraintStart_toEndOf="@+id/txt_setting_sort"
            app:layout_constraintTop_toBottomOf="@+id/radioButton_sort_by_arr_time" />

        <RadioButton
            android:id="@+id/radioButton_sort_by_arr_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/landing_time"
            app:layout_constraintStart_toEndOf="@+id/txt_setting_sort"
            app:layout_constraintTop_toTopOf="parent" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group_sorting" />

    <Button
        android:id="@+id/btn_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group_sorting" />


</androidx.constraintlayout.widget.ConstraintLayout>