<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/general_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        app:layout_constraintEnd_toEndOf="@+id/arr_dep_details"
        app:layout_constraintStart_toStartOf="@+id/arr_dep_details">

        <TextView
            android:id="@+id/txt_airline_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:text="@string/airline_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_airline_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginEnd="10dp"
            android:text="@string/class_txt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/arr_dep_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/general_details"
        android:minHeight="100dp"
        app:layout_constraintEnd_toEndOf="@+id/fareList"
        app:layout_constraintStart_toStartOf="@+id/fareList">

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txt_origin_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arrival_code" />

            <TextView
                android:id="@+id/txt_departure_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_origin_code"
                android:text="@string/dep_time" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:rotation="90"
            android:src="@drawable/ic_flight_black_24dp"
            app:layout_constraintBottom_toBottomOf="@+id/relativeLayout2"
            app:layout_constraintEnd_toStartOf="@+id/relativeLayout"
            app:layout_constraintStart_toEndOf="@+id/relativeLayout2"
            app:layout_constraintTop_toTopOf="@+id/relativeLayout2" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/appCompatImageView">

            <TextView
                android:id="@+id/txt_dest_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arrival_code" />

            <TextView
                android:id="@+id/txt_arrival_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_dest_code"
                android:text="@string/dep_time" />

        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fareList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/arr_dep_details"
        android:minHeight="70dp" />

</RelativeLayout>